test/corpus/several_empty_fields.txt
====================
Several empty fields
====================
1,,,,,,,,9,10


---

(csv
  (row
    (first)
    (second)
    (third)
    (fourth)
    (fifth)
    (sixth)
    (seventh)
    (first)
    (second)
    (third)))
